menú y footer fijos

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <!-- src/app/app.html -->
-<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
   <div class="container">
     <a class="navbar-brand fw-bold" routerLink="/">{{ title() }}</a>
 
@@ -15,11 +15,11 @@
   </div>
 </nav>
 
-<main class="py-4">
+<main class="py-4 content">
   <router-outlet></router-outlet>
 </main>
 
-<footer class="bg-light text-muted py-3 mt-5">
+<footer class="bg-light text-muted py-3 fixed-bottom">
   <div class="container text-center small">
     © Nexus Books — Simulación de e-commerce · Diseño con Bootstrap
   </div>
