--- a/src/app/components/buscador/buscador.html
+++ b/src/app/components/buscador/buscador.html
@@ -37,7 +37,7 @@
           <p class="small flex-grow-1">{{ libro.descripcion }}</p>
           <div class="d-flex justify-content-between align-items-center mt-3">
             <span class="fw-semibold">${{ libro.precio.toFixed(2) }}</span>
-            <button class="btn btn-success btn-sm" (click)="addToCart(libro)">Añadir</button>
+            <button class="btn btn-success btn-sm" (click)="addToCart(libro)">Añadir al carrito</button>
           </div>
         </div>
       </div>
