--- a/src/app/components/landing/landing.html
+++ b/src/app/components/landing/landing.html
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="col-md-6 text-center">
-          <img [src]="imagePath" class="img-fluid rounded" alt="Nexus Books">
+          <img [src]="imagePath" class="img-fluid rounded w-75" alt="Nexus Books">
           <div class="mt-2" *ngIf="showPromo">
             <small class="text-muted">Promo: envío gratis en pedidos superiores a $50</small>
           </div>
