--- a/src/app/components/buscador/buscador.html
+++ b/src/app/components/buscador/buscador.html
@@ -33,7 +33,9 @@
   <div class="row">
     <div class="col-md-3 mb-4" *ngFor="let libro of librosFiltrados">
       <div class="card h-100">
-        <img [src]="libro.imagen" class="card-img-top" [alt]="libro.titulo">
+        <div class="card-img-top cover-wrap">
+          <img [src]="libro.imagen" class="book-cover" [alt]="libro.titulo">
+        </div>
         <div class="card-body d-flex flex-column">
           <h5 class="card-title">{{ libro.titulo }}</h5>
           <p class="card-subtitle mb-2 text-muted">{{ libro.autor }} • {{ libro.anio }}</p>
